# data_manager

./: .gitignore  MANIFEST.IN  README.md  __init__.py  constants.py  data_manager.py  json_extender.py  pyproject.toml  saving_tools.py  settings_example.ini  utils.py
browser/: base.html  index.html
browser/css/: bootstrap_supp.css  styles.css
browser/files/: manifest.json
browser/fragments/: base.html  change_theme.html  dropdown.html  old_base.html  scroller.html
browser/js/: script.js
browser/py/: browser_builder.py  script.py
src/data_manager/: __init__.py  __main__.py  browser_builder.py  constants.py  data_manager.py  json_extender.py  settings_example.ini  utils.py
src/data_manager/browser/css/: styles.css
src/data_manager/browser/fragments/: base.html  logos.html  scroller.html
src/data_manager/browser/js/: script.js
src/data_manager/browser/py/: browser_builder.py
src/data_manager/tests/: add_browser_data_to_all.py  delete_empty_folders.py  test_add_to_browser.py  test_argparse.py  test_browser_data.py  test_data_manager.py  test_data_manager_reload.py  test_file_exists.py
tests/: add_browser_data_to_all.py  delete_empty_folders.py  test_add_to_browser.py  test_browser_data.py  test_data_manager.py  test_data_manager_reload.py  test_file_exists.py  test_manager.py  test_new_colors.py
wordlists/: experiment_wordlist.txt  ge_villes.txt
