[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data_manager"
version = "0.5"
authors = [
  { name="Lucas Marti", email="lucas.marti@dxdt.ch" },
]
description = "A package to manage data created during the PhD"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/lmarti-dev/data_manager"
Issues = "https://github.com/lmarti-dev/data_manager/issues"


[tool.setuptools.packages.find]
where = ["src"]