[build-system]
requires = ["setuptools>=61.0","matplotlib>=3.8.3","PyMuPDF>=1.23.21","sympy>=1.11.1","openfermion>=1.6.0","numpy>=1.24.3","lxml>=5.1.0","cirq_core>=1.3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data_manager"
version = "0.55"
authors = [
  { name="Lucas Marti", email="lucas.marti@dxdt.ch" },
]
description = "A package to manage data created during my PhD"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/lmarti-dev/data_manager"
Issues = "https://github.com/lmarti-dev/data_manager/issues"


[tool.setuptools.packages.find]
where = ["src"]